frontend: Fix toast on mobile devices

--- a/internal/http/frontend/src/assets/main.css
+++ b/internal/http/frontend/src/assets/main.css
@@ -64,3 +64,7 @@ html {
 .p-inputtext {
   width: 100%;
 }
+
+.p-toast {
+  max-width: calc(100vw - 40px);
+}
